# weather

./: Makefile  configure.ac  configure.in
php/: cpu.php  hum.html  hum.php  index.php  pressure.php  rainfall.html  rainfall.php  table.php  tmp.html  tmp.php  visibility.php  wind.php  windir.php
rrd/: byzip  createit  fetch  hum  rainfall  tmp  weathergather  weatherupdate
src/: Makefile.am  fetch.c  fetch.h  lexer.l  main.c  parser.y
